--- a/pages/10351.html
+++ b/pages/10351.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -328,18 +328,20 @@ margin-left: 0em;
 
 <ul>
 <li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Asymptotic_freedom'>Asymptotic freedom</a></em></li>
+
+<li>Chris Elliott, Brian Williams, Philsang Yoo, <em>Asymptotic freedom in the BV formalism</em>, J. Geom. Phys. <strong>123</strong> (2018) 246-283 <a href='https://arxiv.org/abs/1702.05973'>arxiv/1702.05973</a> <a href='https://doi.org/10.1016/j.geomphys.2017.08.009'>doi</a></li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on September 12, 2017 05:54:55 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  Revised on March 27, 2018 11:26:02 
+  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
+  (193.198.162.14)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/asymptotic+freedom" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/asymptotic+freedom/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/asymptotic+freedom" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/asymptotic+freedom" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/asymptotic+freedom" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/asymptotic+freedom/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/asymptotic+freedom" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/asymptotic+freedom" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
