--- a/pages/9250.html
+++ b/pages/9250.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -377,7 +377,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Reshetikhin-Turaev+construction'>Reshetikhin–Turaev model</a> / <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
+<p><span class='newWikiWord'>Reshetikhin?Turaev model<a href='/nlab/new/Reshetikhin%3FTuraev+model'>?</a></span> / <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
 </li>
 
 <li>
@@ -603,7 +603,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -1042,7 +1042,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>on the description of <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbative</a> <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> via <a class='existingWikiWord' href='/nlab/show/factorization+algebra+of+observables'>factorization algebras of observables</a> (see there for more details).</p>
+<p>on the description of <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbative</a> <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> via <a class='existingWikiWord' href='/nlab/show/factorization+algebra+of+observables'>factorization algebras of observables</a> (see there for more details). Vol. 1 appeared in series New Mathematical Monographs, vol. 31, Cambridge University Press (2016).</p>
 
 <p>The construction proceeds by a refined (spacetime-local) form of <a class='existingWikiWord' href='/nlab/show/deformation+quantization'>deformation quantization</a> via <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-complexes</a>. For <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> of <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> terms it relies on methods in</p>
 
@@ -1062,14 +1062,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 11, 2017 12:43:18 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (209.93.157.137)
+  Revised on March 27, 2018 11:29:06 
+  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
+  (193.198.162.14)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Factorization+algebras+in+perturbative+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Factorization+algebras+in+perturbative+quantum+field+theory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Factorization+algebras+in+perturbative+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Factorization+algebras+in+perturbative+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Factorization+algebras+in+perturbative+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Factorization+algebras+in+perturbative+quantum+field+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Factorization+algebras+in+perturbative+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Factorization+algebras+in+perturbative+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
