--- a/pages/5164.html
+++ b/pages/5164.html
@@ -309,21 +309,21 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://www-math.mit.edu/~speyer/'>website</a></li>
+<li><a href='http://www-personal.umich.edu/~speyer/'>University of Michigan page</a></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on November  8, 2010 20:07:12 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.211.232.76)
+  Revised on March 27, 2018 19:36:04 
+  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
+  (69.112.103.83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Speyer" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/David+Speyer" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Speyer/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/David+Speyer" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Speyer" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
