--- a/pages/5758.html
+++ b/pages/5758.html
@@ -471,9 +471,13 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/model+structure+on+algebraic+fibrant+objects'>model structure on algebraic fibrant objects</a></li>
 </ul>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Grothendieck+construction+for+model+categories'>Grothendieck construction for model categories</a></p>
+</li>
 </ul>
 
-<h2 id='presentation_of_categories'>Presentation of <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h2>
+<h2 id='presentation_of_categories'>Presentation of <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h2>
 
 <ul>
 <li>
@@ -499,7 +503,7 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Cisinski+model+structure'>Cisinski model structure</a></li>
 </ul>
 
-<h3 id='for_groupoids'>for <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids</h3>
+<h3 id='for_groupoids'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids</h3>
 
 <p><a class='existingWikiWord' href='/nlab/show/model+structure+for+infinity-groupoids'>for ∞-groupoids</a></p>
 
@@ -537,7 +541,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+strict+omega-groupoids'>on strict ω-groupoids</a>, <a class='existingWikiWord' href='/nlab/show/canonical+model+structure+on+groupoids'>on groupoids</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+strict+omega-groupoids'>on strict ∞-groupoids</a>, <a class='existingWikiWord' href='/nlab/show/canonical+model+structure+on+groupoids'>on groupoids</a></p>
 </li>
 
 <li>
@@ -551,7 +555,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_groupoids_2'>for <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-groupoids</h3>
+<h3 id='for_groupoids_2'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-groupoids</h3>
 
 <ul>
 <li>
@@ -563,7 +567,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_groups'>for <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groups</h3>
+<h3 id='for_groups'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groups</h3>
 
 <ul>
 <li>
@@ -575,7 +579,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_algebras'>for <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-algebras</h3>
+<h3 id='for_algebras'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-algebras</h3>
 
 <h4 id='general'>general</h4>
 
@@ -637,7 +641,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_categories'>for <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
+<h3 id='for_categories'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li>
@@ -661,13 +665,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_stable_categories'>for stable <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
+<h3 id='for_stable_categories'>for stable <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/model+structure+on+dg-categories'>on dg-categories</a></li>
 </ul>
 
-<h3 id='for_operads'>for <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-operads</h3>
+<h3 id='for_operads'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-operads</h3>
 
 <ul>
 <li>
@@ -681,15 +685,15 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_categories_2'>for <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-categories</h3>
+<h3 id='for_categories_2'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Theta-space'>for (n,r)-categories as Θ-spaces</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Theta-space'>for (n,r)-categories as ∞-spaces</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/model+structure+for+weak+complicial+sets'>for weak ω-categories as weak complicial sets</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+for+weak+complicial+sets'>for weak ∞-categories as weak complicial sets</a></p>
 </li>
 
 <li>
@@ -701,11 +705,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+strict+omega-categories'>on strict ω-categories</a></p>
+<p><span class='newWikiWord'>on strict ∞-categories<a href='/nlab/new/model+structure+on+strict+%E2%88%9E-categories'>?</a></span></p>
 </li>
 </ul>
 
-<h3 id='for_sheaves__stacks'>for <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-sheaves / <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-stacks</h3>
+<h3 id='for_sheaves__stacks'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-sheaves / <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-stacks</h3>
 
 <ul>
 <li>
@@ -1046,7 +1050,7 @@ margin-left: 0em;
 
 <p>The category of <a class='existingWikiWord' href='/nlab/show/dg-module'>dg-modules</a> over a <a class='existingWikiWord' href='/nlab/show/differential+graded+algebra'>dg-algebra</a>, or more generally a <a class='existingWikiWord' href='/nlab/show/dg-category'>dg-category</a>, admits <a class='existingWikiWord' href='/nlab/show/dg-model+category'>dg-model structures</a> which present the <a class='existingWikiWord' href='/nlab/show/derived+dg-category+of+a+dg-category'>derived dg-category</a>.</p>
 
-<p>In the case of <a class='existingWikiWord' href='/nlab/show/differential+graded+algebra'>dg-algebras</a> in an <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, <a class='existingWikiWord' href='/nlab/show/dg-module'>dg-modules</a> are the same as <a class='existingWikiWord' href='/nlab/show/module+over+an+algebra+over+an+operad'>modules</a> over <a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebras</a> over the <a class='existingWikiWord' href='/nlab/show/associative+operad'>associative operad</a> in <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Ch</mi><mo stretchy='false'>(</mo><mi>𝒜</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Ch(\mathcal{A})</annotation></semantics></math>. These admit model structures as described in <a class='existingWikiWord' href='/nlab/show/model+structure+on+modules+over+an+algebra+over+an+operad'>model structure on modules over an algebra over an operad</a>, <a class='existingWikiWord' href='/nlab/show/transferred+model+structure'>transferred</a> from the <a class='existingWikiWord' href='/nlab/show/model+structure+on+chain+complexes'>model structures on chain complexes</a> in <math class='maruku-mathml' display='inline' id='mathml_4d98208215f4df2f05532521987b2e1daf8e074b_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>.</p>
+<p>In the case of <a class='existingWikiWord' href='/nlab/show/differential+graded+algebra'>dg-algebras</a> in an <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, <a class='existingWikiWord' href='/nlab/show/dg-module'>dg-modules</a> are the same as <a class='existingWikiWord' href='/nlab/show/module+over+an+algebra+over+an+operad'>modules</a> over <a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebras</a> over the <a class='existingWikiWord' href='/nlab/show/associative+operad'>associative operad</a> in <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Ch</mi><mo stretchy='false'>(</mo><mi>𝒜</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Ch(\mathcal{A})</annotation></semantics></math>. These admit model structures as described in <a class='existingWikiWord' href='/nlab/show/model+structure+on+modules+over+an+algebra+over+an+operad'>model structure on modules over an algebra over an operad</a>, <a class='existingWikiWord' href='/nlab/show/transferred+model+structure'>transferred</a> from the <a class='existingWikiWord' href='/nlab/show/model+structure+on+chain+complexes'>model structures on chain complexes</a> in <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>.</p>
 
 <p>More generally there are <a class='existingWikiWord' href='/nlab/show/model+category'>model structures</a> on <a class='existingWikiWord' href='/nlab/show/dg-module'>dg-modules</a> over a <a class='existingWikiWord' href='/nlab/show/dg-category'>dg-category</a>, analogous to <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model structures on simplicial presheaves</a>.</p>
 
@@ -1154,6 +1158,12 @@ margin-left: 0em;
 <li id='BarthelMayRiehl14'><a class='existingWikiWord' href='/nlab/show/Tobias+Barthel'>Tobias Barthel</a>, <a class='existingWikiWord' href='/nlab/show/Peter+May'>Peter May</a>, <a class='existingWikiWord' href='/nlab/show/Emily+Riehl'>Emily Riehl</a>, <em>Six model structures for DG-modules over DGAs: model category theory in homological action</em>, New York J. Math. 20 (2014) 1077–1159 (<a href='http://www.math.harvard.edu/~eriehl/six.pdf'>pdf</a>)</li>
 </ul>
 
+<p>Discussion as a model for <a class='existingWikiWord' href='/nlab/show/rational+parameterized+stable+homotopy+theory'>rational parameterized stable homotopy theory</a> is due to</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Vincent+Braunack-Mayer'>Vincent Braunack-Mayer</a>, <em><a class='existingWikiWord' href='/schreiber/show/thesis+Braunack-Mayer' title='schreiber'>Rational parameterized stable homotopy theory</a></em>, Zurich 2018</li>
+</ul>
+
 <p>
 </p>
 
@@ -1167,14 +1177,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October  1, 2017 10:56:06 
+  Revised on March 30, 2018 03:41:20 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.50.90)
+  (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/model+structure+on+dg-modules" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+structure+on+dg-modules/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/model+structure+on+dg-modules" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+structure+on+dg-modules" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/model+structure+on+dg-modules" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+structure+on+dg-modules/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/model+structure+on+dg-modules" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+structure+on+dg-modules" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
