--- a/pages/19087.html
+++ b/pages/19087.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      dark matter in nLab
+      bullet cluster in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      dark matter
+      bullet cluster
   </h1>
 
 
@@ -895,301 +895,41 @@ margin-left: 0em;
   <a href='/nlab/edit/physicscontents'>Edit this sidebar</a>
 </p>
 </div></div>
-
-<h4 id='fields_and_quanta'>Fields and quanta</h4>
-
-<div class='hide'>
-<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/photon'>photon</a> - <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a> (abelian <a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/W-boson'>W</a>, <a class='existingWikiWord' href='/nlab/show/W-boson'>Z</a>, <a class='existingWikiWord' href='/nlab/show/W-boson'>B-boson</a> - <a class='existingWikiWord' href='/nlab/show/electroweak+field'>electroweak field</a> (<a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gluon'>gluon</a> - <a class='existingWikiWord' href='/nlab/show/nuclear+force'>strong nuclear force</a> (<a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/graviton'>graviton</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/infraparticle'>infraparticle</a></p>
-</li>
-</ul>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>, <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflaton</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a>)</li>
-</ul>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>, <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac fields</a>)</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/electron'>electron</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/quark'>quark</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/muon'>muon</a></p>
-</li>
-</ul>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/hadron'>hadron</a></strong> (<a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> of the above <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>)</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/meson'>meson</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/pion'>pion</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/baryon'>baryon</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/proton'>proton</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/neutron'>neutron</a></p>
-</li>
-</ul>
-</li>
-</ul>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/MSSM'>minimally extended supersymmetric standard model</a></strong></p>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a></strong></p>
-
-<p>bosinos:</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> (<a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> - <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills field</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a></p>
-</li>
-</ul>
-
-<p><a class='existingWikiWord' href='/nlab/show/sfermion'>sfermions</a>:</p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/squark'>squark</a></li>
-</ul>
-
-<p><strong>Exotica</strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/preon'>preon</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/axion'>axion</a>, <a class='existingWikiWord' href='/nlab/show/dilaton'>dilaton</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/monopole'>monopole</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/dual+graviton'>dual graviton</a></p>
-</li>
-</ul>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/auxiliary+field'>auxiliary fields</a></strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost field</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/antifield'>antifield</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>, <a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></p>
-</li>
-</ul>
-</div>
 </div>
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#Evidence'>Evidence</a></li><li><a href='#axions'>Axions</a></li><li><a href='#lightest_superpartner'>Lightest super-partner</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> at large scales seems to behave as if it contains large amount of <a class='existingWikiWord' href='/nlab/show/matter'>matter</a> which does have a <a class='existingWikiWord' href='/nlab/show/gravity'>gravitational effect</a> but does not emit <a class='existingWikiWord' href='/nlab/show/electromagnetic+radiation'>electromagnetic radiation</a> and hence remains “dark” to telescopes. This hypothetical matter is therefore called <em>dark matter</em>.</p>
+<p>What is called the <em>bullet cluster</em> is a pair of colliding <span class='newWikiWord'>galaxy clusters<a href='/nlab/new/galaxy+clusters'>?</a></span> observed at a distance of about 3.7 billion <span class='newWikiWord'>light-years<a href='/nlab/new/light-years'>?</a></span>.</p>
 
-<p>There are mainly two astronomical observations that suggest the existence of dark matter</p>
-
-<ol>
-<li>
-<p>galaxy rotation curves – the speed of rotation of <a class='existingWikiWord' href='/nlab/show/galaxy'>galaxies</a> as a function of the distance from their center cannot be explained by the observed visible matter, but an explanation of this dependence by gravitating matter requires the presence of plenty of dark matter;</p>
-</li>
-
-<li>
-<p>cosmic microwave background fluctuations – the measured fluctuations in the <a class='existingWikiWord' href='/nlab/show/cosmic+microwave+background+radiation'>cosmic microwave background</a> are very well fitted by the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> with cold dark matter (CDM) included. (see also <a href='#Resonaances'>Resonaances, 18 Jan 2013</a>).</p>
-</li>
-</ol>
-
-<p>Any further details about the nature of this hypothetical dark matter remain elusive to date. Possible classes of candidates go by various names. For instance “weakly interacting massive particles” (“WIMP”s), hence massive particles that interact via <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> and the <a class='existingWikiWord' href='/nlab/show/nuclear+force'>weak nuclear force</a>, but not via <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a>. In <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetric</a> <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theories</a>, the <em>lightest supersmmetric particle</em> (LSP, such as the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> or the <span class='newWikiWord'>neutralino<a href='/nlab/new/neutralino'>?</a></span>) is a natural candidate for dark matter (<a href='#EHNOS84'>EHNOS 84</a>, reviewed in <a href='#EllisOlive10'>Ellis-Olive 10</a>)</p>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/fuzzy+dark+matter'>fuzzy dark matter</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a>, <a class='existingWikiWord' href='/nlab/show/dark+radiation'>dark radiation</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/MOND'>MOND</a></p>
-</li>
-</ul>
+<p>The bullet cluster stands out in that comparison of its distribution of visible matter and non-visible gravitating matter seems to show that the centers of mass of the two components are separating during the collision. This has famously been interpreted as a strong indirect evidence for the <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> hypothesis.</p>
 
 <h2 id='references'>References</h2>
 
-<h3 id='general'>General</h3>
-
-<p>Review includes</p>
-
 <ul>
-<li id='Einasto09'>
-<p>Jaan Einasto, <em>Dark matter</em> (<a href='https://arxiv.org/abs/0901.0632'>arXiv:0901.0632</a>) 2009</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Syksy+R%C3%A4s%C3%A4nen'>Syksy Räsänen</a>, <em>Dark matter</em> cosmo 2015 lecture notes (<a href='http://www.courses.physics.helsinki.fi/teor/cos1/cosmo2015_07.pdf'>pdf</a>)</p>
-</li>
-
-<li>
-<p>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Dark_matter'>Dark matter</a></em></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Matthew+Strassler'>Matthew Strassler</a>, <em><a href='http://profmattstrassler.com/articles-and-posts/relativity-space-astronomy-and-cosmology/dark-matter/current-hints-of-dark-matter-413/'>Current hints of dark matter</a></em></p>
-</li>
-
-<li id='Resonaances'>
-<p>Resonaances, <em><a href='http://resonaances.blogspot.de/2013/01/how-many-neutrinos-in-sky.html'>How many neutrinos in the sky</a></em></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Ethan+Siegel'>Ethan Siegel</a>, <em><a href='https://medium.com/starts-with-a-bang/7-independent-pieces-of-evidence-for-dark-matter-3692126a2283'>Seven independent pieces of evidence for dark matter</a></em>, <em><a href='https://medium.com/starts-with-a-bang/10-facts-everyone-should-know-about-dark-matter-1ce2b222cf08'>Ten things everyone should know about dark matter</a></em> 2015</p>
-</li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Bullet_Cluster'>Bullet cluster</a></em></li>
 </ul>
-
-<h3 id='Evidence'>Evidence</h3>
-
-<ul>
-<li>Pieter van Dokkum et.al. <em>A galaxy lacking dark matter</em> (<a href='https://arxiv.org/abs/1803.10237'>arXiv:1803.10237</a>)</li>
-</ul>
-
-<blockquote>
-<p>Regardless of the formation history of NGC1052–DF2, its existence has implications for the dark matter paradigm. Our results demonstrate that dark matter is separable from galaxies, which is (under certain circumstances) expected if it is bound to baryons through nothing but gravity. The “<a class='existingWikiWord' href='/nlab/show/bullet+cluster'>bullet cluster</a>” demonstrates that dark matter does not always trace the bulk of the baryonic mass, which in clusters is in the form of gas. NGC1052–DF2 enables us to make the complementary point that dark matter does not always coincide with galaxies either: it is a distinct “substance” that may or may not be present in a galaxy. Furthermore, and paradoxically, the existence of NGC1052–DF2 may falsify alternatives to dark matter. In theories such as <a class='existingWikiWord' href='/nlab/show/MOND'>MOND</a> and the recently proposed emergent gravity paradigm a “dark matter” signature should always be detected, as it is an unavoidable consequence of the presence of ordinary matter. In fact, it had been argued previously that the apparent absence of galaxies such as NGC1052–DF2 constituted a falsification of the standard cosmological model, and evidence for modified gravity.</p>
-</blockquote>
-
-<h3 id='axions'>Axions</h3>
-
-<p>The observation that the “invisible <a class='existingWikiWord' href='/nlab/show/axion'>axion</a>” is a candidate for dark matter is due to three groups:</p>
-
-<ul>
-<li id='PreskillWiseWilcek83'>
-<p><a class='existingWikiWord' href='/nlab/show/John+Preskill'>John Preskill</a>, M. Wise, <a class='existingWikiWord' href='/nlab/show/Frank+Wilcek'>Frank Wilcek</a>, <em>Cosmology of the invisible axion</em>, Phys. Lett. B 120:127-32 (1983)</p>
-</li>
-
-<li id='AbbottSikivie83'>
-<p>L.F. Abbott, P. Sikivie, <em>A Cosmological Bound on the Invisible Axion</em>, Phys.Lett. B120:133-36 (1983)</p>
-</li>
-
-<li id='DineFischler83'>
-<p><a class='existingWikiWord' href='/nlab/show/Michael+Dine'>Michael Dine</a>, <a class='existingWikiWord' href='/nlab/show/Willy+Fischler'>Willy Fischler</a>, <em>The Not So Harmless Axion</em>, Phys.Lett. B120:137-141 (1983)</p>
-</li>
-</ul>
-
-<p>A proposal that <a class='existingWikiWord' href='/nlab/show/axion'>axions</a> account for <a class='existingWikiWord' href='/nlab/show/fuzzy+dark+matter'>fuzzy dark matter</a>, and thus fix the <a class='existingWikiWord' href='/nlab/show/dark+matter'>WIMP</a> model for dark matter with its problem of reproducing galactic rotation curves, is in</p>
-
-<ul>
-<li id='HOTW16'>Lam Hui, Jeremiah P. Ostriker, Scott Tremaine, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>On the hypothesis that cosmological dark matter is composed of ultra-light bosons</em>, Phys. Rev. D 95, 043541 (2017) (<a href='https://arxiv.org/abs/1610.08297'>arXiv:1610.08297</a>)</li>
-</ul>
-
-<h3 id='lightest_superpartner'>Lightest super-partner</h3>
-
-<p>The observation that the lightest supersymmetric particle is a natural dark matter candidate goes back to</p>
-
-<ul>
-<li id='EHNOS84'><a class='existingWikiWord' href='/nlab/show/John+Ellis'>John Ellis</a>, J.S. Hagelin, Dimitri V. Nanopoulos, <a class='existingWikiWord' href='/nlab/show/Keith+Olive'>Keith Olive</a>, M. Srednicki <em>Supersymmetric relics from the Big Bang</em>, Nuclear Physics B 238[2]: 453-76, 1984 (<a href='http://inspirehep.net/record/191839?ln=en'>SPIRE</a>)</li>
-</ul>
-
-<p>with review in</p>
-
-<ul>
-<li id='EllisOlive10'><a class='existingWikiWord' href='/nlab/show/John+Ellis'>John Ellis</a>, <a class='existingWikiWord' href='/nlab/show/Keith+Olive'>Keith Olive</a>, <em>Supersymmetric Dark Matter Candidates</em> (<a href='http://arxiv.org/abs/1001.3651'>arXiv:1001.3651</a>)</li>
-</ul>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on March 30, 2018 20:42:19 
+  Created on March 30, 2018 20:53:22 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dark+matter/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/bullet+cluster" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/dark+matter" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/bullet+cluster" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/dark+matter" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/bullet+cluster" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/dark+matter" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/bullet+cluster" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
