--- a/pages/19087.html
+++ b/pages/19087.html
@@ -909,12 +909,34 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Bullet_Cluster'>Bullet cluster</a></em></li>
+<li>
+<p>Chiara Mastropietro, Andreas Burkert, <em>Simulating the Bullet Cluster</em>, Wiley Online Library (<a href='https://doi.org/10.1111/j.1365-2966.2008.13626.x'>doi:10.1111/j.1365-2966.2008.13626.x</a>)</p>
+</li>
+
+<li>
+<p>M.Bradač, <em>Dark Matter: Revealing the Invisible with 2 Cosmic Supercolliders the “Bullet Cluster” 1E0657-56 and MACSJ0025-1222</em>, Nuclear Physics B - Proceedings Supplements Volume 194, October 2009, Pages 17-21 (<a href='https://doi.org/10.1016/j.nuclphysbps.2009.07.002'>doi:10.1016/j.nuclphysbps.2009.07.002</a>)</p>
+</li>
+
+<li>
+<p>Andrew Robertson, Richard Massey, Vincent Eke, <em>What does the Bullet Cluster tell us about self-interacting dark matter?</em> (<a href='https://arxiv.org/abs/1605.04307'>arXiv:1605.04307</a>)</p>
+</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>
+<p>PennState Phys010: <em><a href='https://online.science.psu.edu/phys010_archive_suwd/node/8306'>Bullet cluster</a></em></p>
+</li>
+
+<li>
+<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Bullet_Cluster'>Bullet cluster</a></em></p>
+</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Created on March 30, 2018 20:53:22 
+  Created on March 30, 2018 21:24:29 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.90.187)
 </div>
