--- a/pages/9183.html
+++ b/pages/9183.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1068,6 +1068,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/bullet+cluster'>bullet cluster</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/fuzzy+dark+matter'>fuzzy dark matter</a></p>
 </li>
 
@@ -1119,7 +1123,7 @@ margin-left: 0em;
 <h3 id='Evidence'>Evidence</h3>
 
 <ul>
-<li>Pieter van Dokkum et.al. <em>A galaxy lacking dark matter</em> (<a href='https://arxiv.org/abs/1803.10237'>arXiv:1803.10237</a>)</li>
+<li>Pieter van Dokkum et.al. <em>A galaxy lacking dark matter</em>, Nature volume 555, 2018 pages 629–632 (<a href='https://arxiv.org/abs/1803.10237'>arXiv:1803.10237</a>, <a href='https://www.nature.com/articles/nature25767'>doi:10.1038/nature25767</a>)</li>
 </ul>
 
 <blockquote>
@@ -1174,7 +1178,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 30, 2018 20:42:19 
+  Revised on March 30, 2018 21:32:19 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.90.187)
 </div>
