--- a/pages/4439.html
+++ b/pages/4439.html
@@ -690,6 +690,10 @@ margin-left: 0em;
 <li>
 <p>Кетов С.В. “Введение в квантовую теорию струн и суперструн” <a href='http://www.stringworld.ru/files/Ketov_S.V._Vvedenie_v_kvantovuju_teoriju_strun_i_superstrun.djvu'>djvu</a></p>
 </li>
+
+<li id='IbanezUranga12'>
+<p><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, <em><a class='existingWikiWord' href='/nlab/show/String+Theory+and+Particle+Physics+--+An+Introduction+to+String+Phenomenology'>String Theory and Particle Physics -- An Introduction to String Phenomenology</a></em>, Cambridge University Press 2012</p>
+</li>
 </ul>
 
 <h2 id='physics_lecture_notes'>Physics lecture notes</h2>
@@ -736,7 +740,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Anton+Kapustin'>Anton Kapustin</a>, <a class='existingWikiWord' href='/nlab/show/Dmitri+Orlov'>D. O. Orlov</a>, <em>Lectures on mirror symmetry, derived categories, and <math class='maruku-mathml' display='inline' id='mathml_5ca226942f911f244a23e366244b47375c21fc62_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math>-branes</em>, Russian Mathematical Surveys, 2004, 59:5, 907–940 (Russian version: <a href='http://www.mathnet.ru/php/getFT.phtml?jrnid=rm&amp;paperid=772&amp;volume=59&amp;year=2004&amp;issue=5&amp;fpage=101&amp;what=fullt&amp;option_lang=eng'>pdf</a>, [arxiv version: arxiv:math.AG/0308173).]</p>
+<p><a class='existingWikiWord' href='/nlab/show/Anton+Kapustin'>Anton Kapustin</a>, <a class='existingWikiWord' href='/nlab/show/Dmitri+Orlov'>D. O. Orlov</a>, <em>Lectures on mirror symmetry, derived categories, and <math class='maruku-mathml' display='inline' id='mathml_fe24d3830148ac5c4e8061bcc228b69e05c5b592_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math>-branes</em>, Russian Mathematical Surveys, 2004, 59:5, 907–940 (Russian version: <a href='http://www.mathnet.ru/php/getFT.phtml?jrnid=rm&amp;paperid=772&amp;volume=59&amp;year=2004&amp;issue=5&amp;fpage=101&amp;what=fullt&amp;option_lang=eng'>pdf</a>, [arxiv version: arxiv:math.AG/0308173).]</p>
 </li>
 </ul>
 
@@ -776,14 +780,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 16, 2016 09:03:50 
-  by <span class="newWikiWord">Gerben Venken<a href="/nlab/new/Gerben+Venken">?</a></span>
-  (84.194.205.36)
+  Revised on March 31, 2018 21:19:08 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/books+about+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/books+about+string+theory/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/books+about+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/books+about+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/books+about+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/books+about+string+theory/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/books+about+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/books+about+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
