--- a/pages/1593.html
+++ b/pages/1593.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -669,7 +669,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -1100,9 +1100,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#lift_to_mtherory_ftheory'>Lift to M-therory F-theory</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#References'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <em>orientifold</em> is a <a class='existingWikiWord' href='/nlab/show/target+space'>target</a> <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> for <a class='existingWikiWord' href='/nlab/show/string+theory'>string</a> <a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma-models</a> that combines aspects of <math class='maruku-mathml' display='inline' id='mathml_66ad18842852a085611cc8bb8c58c7b7065c5c8a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/orbifold'>orbifold</a>s with <em><a class='existingWikiWord' href='/nlab/show/orientation'>orientation</a> reversal</em> on the worldsheet, whence the name.</p>
+<p>An <em>orientifold</em> is a <a class='existingWikiWord' href='/nlab/show/target+space'>target</a> <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> for <a class='existingWikiWord' href='/nlab/show/string+theory'>string</a> <a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma-models</a> that combines aspects of <math class='maruku-mathml' display='inline' id='mathml_1d02986c08eb4742fa20f6780b7a606868f48e14_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/orbifold'>orbifold</a>s with <em><a class='existingWikiWord' href='/nlab/show/orientation'>orientation</a> reversal</em> on the worldsheet, whence the name.</p>
 
-<p>Where generally (<a class='existingWikiWord' href='/nlab/show/higher+gauge+field'>higher gauge</a>) <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>/<a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> are <a class='existingWikiWord' href='/nlab/show/cocycle'>cocycles</a> in (<a class='existingWikiWord' href='/nlab/show/differential+cohomology'>differential</a>) <a class='existingWikiWord' href='/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology'>cohomology theory</a> and typically in <a class='existingWikiWord' href='/nlab/show/complex+oriented+cohomology+theory'>complex oriented cohomology theory</a>, fields on orientifolds are cocycles in genuinely <math class='maruku-mathml' display='inline' id='mathml_66ad18842852a085611cc8bb8c58c7b7065c5c8a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/equivariant+cohomology'>equivariant cohomology</a> and typically in <a class='existingWikiWord' href='/nlab/show/real+oriented+cohomology+theory'>real-oriented cohomology theory</a>. For instance the <a class='existingWikiWord' href='/nlab/show/Kalb-Ramond+field'>B-field</a> which otherwise is a (twisted) coycles in (<a class='existingWikiWord' href='/nlab/show/ordinary+differential+cohomology'>ordinary</a>) <a class='existingWikiWord' href='/nlab/show/ordinary+cohomology'>ordinary cohomology</a> over an orientifold is a cocycle in (twisted) <a class='existingWikiWord' href='/nlab/show/HZR-theory'>HZR-theory</a>, and the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-fields</a> which usually are cocycles in (<a class='existingWikiWord' href='/nlab/show/twisted+cohomology'>twisted</a> <a class='existingWikiWord' href='/nlab/show/differential+K-theory'>differential</a>) <a class='existingWikiWord' href='/nlab/show/K-theory'>K-theory</a> over an orientifold are cocycles in <a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a> (<a href='#Witten98'>Witten 98</a>).</p>
+<p>Where generally (<a class='existingWikiWord' href='/nlab/show/higher+gauge+field'>higher gauge</a>) <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>/<a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> are <a class='existingWikiWord' href='/nlab/show/cocycle'>cocycles</a> in (<a class='existingWikiWord' href='/nlab/show/differential+cohomology'>differential</a>) <a class='existingWikiWord' href='/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology'>cohomology theory</a> and typically in <a class='existingWikiWord' href='/nlab/show/complex+oriented+cohomology+theory'>complex oriented cohomology theory</a>, fields on orientifolds are cocycles in genuinely <math class='maruku-mathml' display='inline' id='mathml_1d02986c08eb4742fa20f6780b7a606868f48e14_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/equivariant+cohomology'>equivariant cohomology</a> and typically in <a class='existingWikiWord' href='/nlab/show/real+oriented+cohomology+theory'>real-oriented cohomology theory</a>. For instance the <a class='existingWikiWord' href='/nlab/show/Kalb-Ramond+field'>B-field</a> which otherwise is a (twisted) coycles in (<a class='existingWikiWord' href='/nlab/show/ordinary+differential+cohomology'>ordinary</a>) <a class='existingWikiWord' href='/nlab/show/ordinary+cohomology'>ordinary cohomology</a> over an orientifold is a cocycle in (twisted) <a class='existingWikiWord' href='/nlab/show/HZR-theory'>HZR-theory</a>, and the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-fields</a> which usually are cocycles in (<a class='existingWikiWord' href='/nlab/show/twisted+cohomology'>twisted</a> <a class='existingWikiWord' href='/nlab/show/differential+K-theory'>differential</a>) <a class='existingWikiWord' href='/nlab/show/K-theory'>K-theory</a> over an orientifold are cocycles in <a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a> (<a href='#Witten98'>Witten 98</a>).</p>
 
 <p>An explicit model for <a class='existingWikiWord' href='/nlab/show/Kalb-Ramond+field'>B-fields</a> for the <a class='existingWikiWord' href='/nlab/show/bosonic+string'>bosonic string</a> on orientifolds (differential <a class='existingWikiWord' href='/nlab/show/HZR-theory'>HZR-theory</a>) given in (<a href='#Jandl'>Schreiber-Schweigert-Waldorf 05</a>) and examples are analyzed in this context in (<a href='#GawedzkiSuszekWaldorf08'>Gawedzki-Suszek-Waldorf 08</a>). See also (<a href='#KMSV16'>KMSV 16</a>).</p>
 
@@ -1143,6 +1143,10 @@ margin-left: 0em;
 </ul>
 
 <h2 id='References'>References</h2>
+
+<ul>
+<li id='IbanezUranga12'><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, sections 5.3.4 and 10.1.3 of <em><a class='existingWikiWord' href='/nlab/show/String+Theory+and+Particle+Physics+--+An+Introduction+to+String+Phenomenology'>String Theory and Particle Physics -- An Introduction to String Phenomenology</a></em>, Cambridge University Press 2012</li>
+</ul>
 
 <p>The original observation that <a class='existingWikiWord' href='/nlab/show/D-brane'>D-brane charge</a> for orientifolds should be in <a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a> is due to</p>
 
@@ -1216,7 +1220,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>A formulation of some of the relevant aspects of (bosonic) orientifolds in terms of the <a class='existingWikiWord' href='/schreiber/show/differential+cohomology+in+a+cohesive+topos' title='schreiber'>differential nonabelian cohomology</a> with coefficients in the <a class='existingWikiWord' href='/nlab/show/2-group'>2-group</a> <math class='maruku-mathml' display='inline' id='mathml_66ad18842852a085611cc8bb8c58c7b7065c5c8a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>AUT</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>AUT(U(1))</annotation></semantics></math> coming from the <a class='existingWikiWord' href='/nlab/show/crossed+module'>crossed module</a> <math class='maruku-mathml' display='inline' id='mathml_66ad18842852a085611cc8bb8c58c7b7065c5c8a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>ℤ</mi> <mn>2</mn></msub><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[U(1) \to \mathbb{Z}_2]</annotation></semantics></math> is indicated in</p>
+<p>A formulation of some of the relevant aspects of (bosonic) orientifolds in terms of the <a class='existingWikiWord' href='/schreiber/show/differential+cohomology+in+a+cohesive+topos' title='schreiber'>differential nonabelian cohomology</a> with coefficients in the <a class='existingWikiWord' href='/nlab/show/2-group'>2-group</a> <math class='maruku-mathml' display='inline' id='mathml_1d02986c08eb4742fa20f6780b7a606868f48e14_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>AUT</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>AUT(U(1))</annotation></semantics></math> coming from the <a class='existingWikiWord' href='/nlab/show/crossed+module'>crossed module</a> <math class='maruku-mathml' display='inline' id='mathml_1d02986c08eb4742fa20f6780b7a606868f48e14_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>ℤ</mi> <mn>2</mn></msub><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[U(1) \to \mathbb{Z}_2]</annotation></semantics></math> is indicated in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Urs+Schreiber'>Urs Schreiber</a>, talk <a class='existingWikiWord' href='/schreiber/show/Background+fields+in+twisted+differential+nonabelian+cohomology' title='schreiber'>Background fields in twisted differential nonabelian cohomology</a> at <a class='existingWikiWord' href='/nlab/show/Oberwolfach+Workshop%2C+June+2009+--+Strings%2C+Fields%2C+Topology'>Oberwolfach Workshop, June 2009 -- Strings, Fields, Topology</a></li>
@@ -1257,14 +1261,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 24, 2016 04:25:44 
+  Revised on March 31, 2018 21:34:32 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.130.183)
+  (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orientifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold/35" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(35 revisions)</span> | <a href="/nlab/show/diff/orientifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orientifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/orientifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
