--- a/pages/16198.html
+++ b/pages/16198.html
@@ -1054,8 +1054,8 @@ margin-left: 0em;
 
 <p>The <a class='existingWikiWord' href='/nlab/show/spontaneously+broken+symmetry'>spontaneous breaking</a> of <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a>. Key to all <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a> with global low energy supersymmetry. In <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> for instance due to <em><a class='existingWikiWord' href='/nlab/show/gravitino+condensation'>gravitino condensation</a></em> or <em><a class='existingWikiWord' href='/nlab/show/gaugino+condensation'>gaugino condensation</a></em>.</p>
 
-<p>In a supersymmetric <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a>, the <a class='existingWikiWord' href='/nlab/show/stress-energy+tensor'>stress-energy tensor</a> <math class='maruku-mathml' display='inline' id='mathml_cd94b2087f186f35b169d1492c51ccae09e29368_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>T_{\mu \nu}</annotation></semantics></math> is the image of the supersymmetry <a class='existingWikiWord' href='/nlab/show/Noether%27s+theorem'>Noether&#39;s</a> <a class='existingWikiWord' href='/nlab/show/conserved+current'>conserved current</a> <math class='maruku-mathml' display='inline' id='mathml_cd94b2087f186f35b169d1492c51ccae09e29368_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>S</mi> <mrow><mi>ν</mi><mi>β</mi></mrow></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(S_{\nu \beta})</annotation></semantics></math> under the <a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie bracket</a> with the <a class='existingWikiWord' href='/nlab/show/supercharge'>supercharge</a> <math class='maruku-mathml' display='inline' id='mathml_cd94b2087f186f35b169d1492c51ccae09e29368_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>Q</mi> <mi>α</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(Q_\alpha)</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cd94b2087f186f35b169d1492c51ccae09e29368_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msub><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><msubsup><mi>γ</mi> <mi>μ</mi> <mrow><mi>α</mi><mi>β</mi></mrow></msubsup><mo stretchy='false'>{</mo><msub><mi>Q</mi> <mi>α</mi></msub><mo>,</mo><msub><mi>S</mi> <mrow><mi>ν</mi><mo>,</mo><mi>β</mi></mrow></msub><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>
+<p>In a supersymmetric <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a>, the <a class='existingWikiWord' href='/nlab/show/stress-energy+tensor'>stress-energy tensor</a> <math class='maruku-mathml' display='inline' id='mathml_f6121074214a196c9818685976477cc5e9811829_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>T_{\mu \nu}</annotation></semantics></math> is the image of the supersymmetry <a class='existingWikiWord' href='/nlab/show/Noether%27s+theorem'>Noether&#39;s</a> <a class='existingWikiWord' href='/nlab/show/conserved+current'>conserved current</a> <math class='maruku-mathml' display='inline' id='mathml_f6121074214a196c9818685976477cc5e9811829_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>S</mi> <mrow><mi>ν</mi><mi>β</mi></mrow></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(S_{\nu \beta})</annotation></semantics></math> under the <a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie bracket</a> with the <a class='existingWikiWord' href='/nlab/show/supercharge'>supercharge</a> <math class='maruku-mathml' display='inline' id='mathml_f6121074214a196c9818685976477cc5e9811829_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>Q</mi> <mi>α</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(Q_\alpha)</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f6121074214a196c9818685976477cc5e9811829_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msub><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><msubsup><mi>γ</mi> <mi>μ</mi> <mrow><mi>α</mi><mi>β</mi></mrow></msubsup><mo stretchy='false'>{</mo><msub><mi>Q</mi> <mi>α</mi></msub><mo>,</mo><msub><mi>S</mi> <mrow><mi>ν</mi><mo>,</mo><mi>β</mi></mrow></msub><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>
   T_{\mu \nu}
   \;=\;
   \gamma_\mu^{\alpha \beta}
@@ -1063,7 +1063,7 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>and hence the <a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a> of the <a class='existingWikiWord' href='/nlab/show/stress-energy+tensor'>stress-energy tensor</a> is</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cd94b2087f186f35b169d1492c51ccae09e29368_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>vac</mi><mo stretchy='false'>|</mo><msub><mi>T</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msub><mo stretchy='false'>|</mo><mi>vac</mi><mo stretchy='false'>⟩</mo><mo>=</mo><msubsup><mi>γ</mi> <mi>μ</mi> <mrow><mi>α</mi><mi>β</mi></mrow></msubsup><mo stretchy='false'>⟨</mo><mi>vac</mi><mo stretchy='false'>|</mo><mo stretchy='false'>{</mo><msub><mi>Q</mi> <mi>α</mi></msub><mo>,</mo><msub><mi>S</mi> <mrow><msub><mi>ν</mi> <mi>beta</mi></msub></mrow></msub><mo stretchy='false'>}</mo><mo stretchy='false'>|</mo><mi>vac</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f6121074214a196c9818685976477cc5e9811829_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>vac</mi><mo stretchy='false'>|</mo><msub><mi>T</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msub><mo stretchy='false'>|</mo><mi>vac</mi><mo stretchy='false'>⟩</mo><mo>=</mo><msubsup><mi>γ</mi> <mi>μ</mi> <mrow><mi>α</mi><mi>β</mi></mrow></msubsup><mo stretchy='false'>⟨</mo><mi>vac</mi><mo stretchy='false'>|</mo><mo stretchy='false'>{</mo><msub><mi>Q</mi> <mi>α</mi></msub><mo>,</mo><msub><mi>S</mi> <mrow><msub><mi>ν</mi> <mi>beta</mi></msub></mrow></msub><mo stretchy='false'>}</mo><mo stretchy='false'>|</mo><mi>vac</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>
   \langle vac \vert 
     T_{\mu \nu}
   \vert vac \rangle
@@ -1089,6 +1089,10 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/soft+supersymmetry+breaking+term'>soft supersymmetry breaking term</a></p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/hidden+sector'>hidden sector</a></p>
 </li>
@@ -1155,14 +1159,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 22, 2018 04:21:03 
+  Revised on March 31, 2018 21:07:20 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.202)
+  (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/supersymmetry+breaking" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supersymmetry+breaking/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/supersymmetry+breaking" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supersymmetry+breaking" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/supersymmetry+breaking" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supersymmetry+breaking/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/supersymmetry+breaking" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supersymmetry+breaking" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
