--- a/pages/9913.html
+++ b/pages/9913.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -315,7 +315,13 @@ margin-left: 0em;
 <li><a href='http://members.ift.uam-csic.es/auranga/intro.html'>webpage</a></li>
 </ul>
 
-<h2 id='related_pages'>related pages</h2>
+<h2 id='writings'>Writings</h2>
+
+<ul>
+<li id='IbanezUranga12'><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, <em><a class='existingWikiWord' href='/nlab/show/String+Theory+and+Particle+Physics+--+An+Introduction+to+String+Phenomenology'>String Theory and Particle Physics -- An Introduction to String Phenomenology</a></em>, Cambridge University Press 2012</li>
+</ul>
+
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_519cfd9e22983e70fca74280db0f366b349f4ea8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a></li>
@@ -325,14 +331,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July 15, 2013 13:09:18 
+  Revised on March 31, 2018 21:00:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.121.27)
+  (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/%C3%81ngel+Uranga" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%C3%81ngel+Uranga/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/%C3%81ngel+Uranga" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%C3%81ngel+Uranga" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/%C3%81ngel+Uranga" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%C3%81ngel+Uranga/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/%C3%81ngel+Uranga" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%C3%81ngel+Uranga" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
