--- a/pages/16761.html
+++ b/pages/16761.html
@@ -326,7 +326,7 @@ margin-left: 0em;
 <li id='IbanezUranga12'><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, <em><a class='existingWikiWord' href='/nlab/show/String+Theory+and+Particle+Physics+--+An+Introduction+to+String+Phenomenology'>String Theory and Particle Physics -- An Introduction to String Phenomenology</a></em>, Cambridge University Press 2012</li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_c755c455e040e63c157561cc960b37743a542256_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_5d239398dd059f055ef34e724a39fd5652f0220a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -336,6 +336,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/intersecting+D-brane+model'>intersecting D-brane model</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs mechanism</a></p>
+</li>
 </ul>
 
 <p>
@@ -343,14 +347,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 31, 2018 21:00:17 
+  Revised on April  2, 2018 17:36:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Luis+Ib%C3%A1%C3%B1ez" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Luis+Ib%C3%A1%C3%B1ez/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Luis+Ib%C3%A1%C3%B1ez" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Luis+Ib%C3%A1%C3%B1ez" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Luis+Ib%C3%A1%C3%B1ez" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Luis+Ib%C3%A1%C3%B1ez/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Luis+Ib%C3%A1%C3%B1ez" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Luis+Ib%C3%A1%C3%B1ez" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
