--- a/pages/17973.html
+++ b/pages/17973.html
@@ -308,6 +308,9 @@ margin-left: 0em;
 
 
 <div id="revision">
+    <p>
+      Discuss this page on the nForum at its <a href=@link_to_nforum_discussion>discussion thread</a>.
+    </p>
     <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
@@ -579,7 +582,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#bottomup_and_topdown_approaches'>Bottom-up and Top-down approaches</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#ChiralFermions'>Chiral fermions</a></li><li><a href='#generations_of_fermions'>Generations of fermions</a></li></ul></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#bottomup_and_topdown_approaches'>Bottom-up and Top-down approaches</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#ChiralFermions'>Chiral fermions</a></li><li><a href='#generations_of_fermions'>Generations of fermions</a></li><li><a href='#higgs_mechanism'>Higgs mechanism</a></li></ul></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a> for <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type IIA string theory</a>, quasi-realistic <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a> (i.e. close to the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, or an <a class='existingWikiWord' href='/nlab/show/MSSM'>MSSM</a>) may be obtained by <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>KK-compactifications</a> from 10d down to 4d. with configurations of <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> which fill all of 4d spacetime and <a class='existingWikiWord' href='/nlab/show/brane+intersection'>intersect</a> in a certain way in the 6-dimensional <a class='existingWikiWord' href='/nlab/show/fiber'>fiber</a> space. The <a class='existingWikiWord' href='/nlab/show/Chan-Paton+bundle'>Chan-Paton gauge field</a> on the <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> yields the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge fields</a> in 4d, and the precise intersection pattern determines the effective <a class='existingWikiWord' href='/nlab/show/fundamental+particle'>fundamental particle</a> content in 4d.</p>
@@ -600,7 +603,7 @@ margin-left: 0em;
 
 <h3 id='ChiralFermions'>Chiral fermions</h3>
 
-<p>The observation that <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>chiral fermions</a> appear when <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> <a class='existingWikiWord' href='/nlab/show/brane+intersection'>intersect</a> at an angle on an <math class='maruku-mathml' display='inline' id='mathml_d39a7dc7f80123b53a1d6aef96be1548014a8672_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mn>3</mn><mo>,</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3,1}</annotation></semantics></math> is due to (<a href='#BerkoozDouglasLeigh96'>Berkooz-Douglas-Leigh 96</a>), see also (<a href='#AFIRU00'>AFIRU 00, section 4</a>).</p>
+<p>The observation that <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>chiral fermions</a> appear when <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> <a class='existingWikiWord' href='/nlab/show/brane+intersection'>intersect</a> at an angle on an <math class='maruku-mathml' display='inline' id='mathml_42ef654dc108489dd6487befdf7b5439672f5db9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mn>3</mn><mo>,</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3,1}</annotation></semantics></math> is due to (<a href='#BerkoozDouglasLeigh96'>Berkooz-Douglas-Leigh 96</a>), see also (<a href='#AFIRU00'>AFIRU 00, section 4</a>).</p>
 
 <p><img src='https://ncatlab.org/nlab/files/D6BranesIntersectingAtAnAngle.png' width='650'/></p>
 
@@ -615,6 +618,12 @@ margin-left: 0em;
 <p><a href='#AldazabalIbanezQuevedoUranga00'>Aldazabal-Ibanez-Quevedo-Uranga 00, p. 307</a></p>
 
 <p><a href='#Uranga12a'>Uranga 12a, p. 12</a></p>
+
+<h3 id='higgs_mechanism'>Higgs mechanism</h3>
+
+<p><a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs mechanism</a> from brane recombination (<a href='#CremadesIbanezMarchesano02'>Cremades-Ibanez-Marchesano 02, section 7</a>):</p>
+
+<p><img src='https://ncatlab.org/nlab/files/BraneRecombination.png' width='600'/></p>
 
 <h2 id='references'>References</h2>
 
@@ -665,14 +674,14 @@ margin-left: 0em;
 <p>Discussion of the <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs mechanism</a>:</p>
 
 <ul>
-<li>D. Cremades, <a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, F. Marchesano, <em>Intersecting brane models of particle physics and the Higgs mechanism</em>, JHEP, 0207, 022 2002 (<a href='https://arxiv.org/abs/hep-th/0203160'>arXiv:hep-th/0203160</a>)</li>
+<li id='CremadesIbanezMarchesano02'>D. Cremades, <a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, F. Marchesano, <em>Intersecting brane models of particle physics and the Higgs mechanism</em>, JHEP, 0207, 022 2002 (<a href='https://arxiv.org/abs/hep-th/0203160'>arXiv:hep-th/0203160</a>)</li>
 </ul>
 
 <p>See also</p>
 
 <ul>
 <li id='AFIRU00'>
-<p>G. Aldazabal, S. Franco, L. E. Ibanez, R. Rabadan, A. M. Uranga, <em><math class='maruku-mathml' display='inline' id='mathml_d39a7dc7f80123b53a1d6aef96be1548014a8672_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D=4</annotation></semantics></math> Chiral String Compactifications from Intersecting Branes</em>, J.Math.Phys.42:3103-3126, 2001 (<a href='https://arxiv.org/abs/hep-th/0011073'>arXiv:hep-th/0011073</a>)</p>
+<p>G. Aldazabal, S. Franco, L. E. Ibanez, R. Rabadan, A. M. Uranga, <em><math class='maruku-mathml' display='inline' id='mathml_42ef654dc108489dd6487befdf7b5439672f5db9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D=4</annotation></semantics></math> Chiral String Compactifications from Intersecting Branes</em>, J.Math.Phys.42:3103-3126, 2001 (<a href='https://arxiv.org/abs/hep-th/0011073'>arXiv:hep-th/0011073</a>)</p>
 </li>
 
 <li>
@@ -708,7 +717,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Jill Ecker, <a class='existingWikiWord' href='/nlab/show/Gabriele+Honecker'>Gabriele Honecker</a>, Wieland Staessens, <em>D6-Brane Model Building on <math class='maruku-mathml' display='inline' id='mathml_d39a7dc7f80123b53a1d6aef96be1548014a8672_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub><mo>×</mo><msub><mi>ℤ</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2 \times \mathbb{Z}_6</annotation></semantics></math>: MSSM-like and Left-Right Symmetric Models</em>, Nuclear Physics B Volume 901, December 2015, Pages 139-215, (<a href='https://arxiv.org/abs/1509.00048'>arXiv:1509.00048</a>)</p>
+<p>Jill Ecker, <a class='existingWikiWord' href='/nlab/show/Gabriele+Honecker'>Gabriele Honecker</a>, Wieland Staessens, <em>D6-Brane Model Building on <math class='maruku-mathml' display='inline' id='mathml_42ef654dc108489dd6487befdf7b5439672f5db9_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub><mo>×</mo><msub><mi>ℤ</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2 \times \mathbb{Z}_6</annotation></semantics></math>: MSSM-like and Left-Right Symmetric Models</em>, Nuclear Physics B Volume 901, December 2015, Pages 139-215, (<a href='https://arxiv.org/abs/1509.00048'>arXiv:1509.00048</a>)</p>
 </li>
 </ul>
 
@@ -720,7 +729,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April  2, 2018 16:58:24 
+  Revised on April  2, 2018 17:11:33
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.90.187)
 </div>
@@ -728,11 +737,11 @@ margin-left: 0em;
 <div class="navigation navfoot">
 
   <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/intersecting+D-brane+model" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/intersecting+D-brane+model" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/intersecting+D-brane+model" id="view_source" rel="nofollow">Source</a>
