--- a/pages/10054.html
+++ b/pages/10054.html
@@ -290,11 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> |
+    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
+    <a href="/nlab/authors" title="Who wrote what">Authors</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
     <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -318,6 +318,8 @@ margin-left: 0em;
 <li>wikipedia <a href='http://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods'>Runge-Kutta methods</a></li>
 
 <li>J.C. Butcher, <em>Coefficients for the study of Runge-Kutta integration processes</em>, J. Austral. Math. Soc. <strong>3</strong> (1963), 185-201</li>
+
+<li>H. Munthe-Kaas, <em>High order Runge–Kutta methods on manifolds</em>, Appl. Num. Math., 29, 115-127 (1999)</li>
 </ul>
 
 <h3 id='for_stochastic_odes'>For stochastic ODE-s:</h3>
@@ -332,42 +334,54 @@ margin-left: 0em;
 <li>Ch. Brouder, <em>Runge-Kutta methods and renormalization</em>, Europ. Phys. J. C12 (2000) 512–534.</li>
 </ul>
 
+<h3 id='lietheoretic_methods'>Lie-theoretic methods</h3>
+
+<ul>
+<li>P. E. Crouch, R. Grossman, <em>Numerical integration of ordinary differential equations on manifolds</em>, J. Nonlinear Sci. <strong>3</strong>: 1-33 (1993) <a href='https://doi.org/10.1007/BF02429858'>doi</a></li>
+</ul>
+
 <h3 id='connections_to_symplectic_geometry'>Connections to symplectic geometry</h3>
+
+<p>See also <a class='existingWikiWord' href='/nlab/show/symplectic+integrator'>symplectic integrator</a>s.</p>
 
 <ul>
 <li>Alberto S. Cattaneo, Benoit Dherin, Giovanni Felder, <em>Formal symplectic groupoid</em>, Comm. Math. Phys. <strong>253</strong> (2005), no. 3, 645–674 <a href='http://arxiv.org/abs/math/0312380'>math.SG/0312380</a> <a href='HTTP://dx.doi.org/10.1007/s00220-004-1199-z'>doi</a></li>
 </ul>
 
 <blockquote>
-<p>The multiplicative structure of the trivial symplectic groupoid over <math class='maruku-mathml' display='inline' id='mathml_55cd97e79c383f12be2c186f1ac1a01fe5cd71d4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>d</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^d</annotation></semantics></math> associated to the zero Poisson structure can be expressed in terms of a generating function. We address the problem of deforming such a generating function in the direction of a non-trivial Poisson structure so that the multiplication remains associative. We prove that such a deformation is unique under some reasonable conditions and we give the explicit formula for it. This formula turns out to be the semi-classical approximation of Kontsevich’s deformation formula. For the case of a linear Poisson structure, the deformed generating function reduces exactly to the CBH formula of the associated Lie algebra. The methods used to prove existence are interesting in their own right as they come from an at first sight unrelated domain of mathematics: the Runge–Kutta theory of the numeric integration of ODE’s.</p>
+<p>The multiplicative structure of the trivial symplectic groupoid over <math class='maruku-mathml' display='inline' id='mathml_55b6095265333770980c172c61089c812e4cf1bf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>d</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^d</annotation></semantics></math> associated to the zero Poisson structure can be expressed in terms of a generating function. We address the problem of deforming such a generating function in the direction of a non-trivial Poisson structure so that the multiplication remains associative. We prove that such a deformation is unique under some reasonable conditions and we give the explicit formula for it. This formula turns out to be the semi-classical approximation of Kontsevich’s deformation formula. For the case of a linear Poisson structure, the deformed generating function reduces exactly to the CBH formula of the associated Lie algebra. The methods used to prove existence are interesting in their own right as they come from an at first sight unrelated domain of mathematics: the Runge–Kutta theory of the numeric integration of ODE’s.</p>
 </blockquote>
 
 <ul>
-<li>Robert McLachlan, Klas Modin, Olivier Verdier, <em>Collective Lie–Poisson integrators on <math class='maruku-mathml' display='inline' id='mathml_55cd97e79c383f12be2c186f1ac1a01fe5cd71d4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3}</annotation></semantics></math></em>, <a href='http://arxiv.org/abs/1307.2387'>arxiv/1307.2387</a></li>
+<li>Robert McLachlan, Klas Modin, Olivier Verdier, <em>Collective Lie–Poisson integrators on <math class='maruku-mathml' display='inline' id='mathml_55b6095265333770980c172c61089c812e4cf1bf_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3}</annotation></semantics></math></em>, <a href='http://arxiv.org/abs/1307.2387'>arxiv/1307.2387</a></li>
 </ul>
 
 <blockquote>
-<p>We develop Lie–Poisson integrators for general Hamiltonian systems on <math class='maruku-mathml' display='inline' id='mathml_55cd97e79c383f12be2c186f1ac1a01fe5cd71d4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3}</annotation></semantics></math> equipped with the rigid body bracket. The method uses symplectic realisation of <math class='maruku-mathml' display='inline' id='mathml_55cd97e79c383f12be2c186f1ac1a01fe5cd71d4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3}</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_55cd97e79c383f12be2c186f1ac1a01fe5cd71d4_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>T</mi> <mo>*</mo></msup><msup><mi>ℝ</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>T^{*}\mathbb{R}^{2}</annotation></semantics></math> and application of <strong>symplectic Runge–Kutta schemes</strong>. As a side product, we obtain simple <a class='existingWikiWord' href='/nlab/show/symplectic+integrator'>symplectic integrator</a>s for general Hamiltonian systems on the sphere <math class='maruku-mathml' display='inline' id='mathml_55cd97e79c383f12be2c186f1ac1a01fe5cd71d4_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>S^{2}</annotation></semantics></math>.</p>
+<p>We develop Lie–Poisson integrators for general Hamiltonian systems on <math class='maruku-mathml' display='inline' id='mathml_55b6095265333770980c172c61089c812e4cf1bf_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3}</annotation></semantics></math> equipped with the rigid body bracket. The method uses symplectic realisation of <math class='maruku-mathml' display='inline' id='mathml_55b6095265333770980c172c61089c812e4cf1bf_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3}</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_55b6095265333770980c172c61089c812e4cf1bf_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>T</mi> <mo>*</mo></msup><msup><mi>ℝ</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>T^{*}\mathbb{R}^{2}</annotation></semantics></math> and application of <strong>symplectic Runge–Kutta schemes</strong>. As a side product, we obtain simple <a class='existingWikiWord' href='/nlab/show/symplectic+integrator'>symplectic integrator</a>s for general Hamiltonian systems on the sphere <math class='maruku-mathml' display='inline' id='mathml_55b6095265333770980c172c61089c812e4cf1bf_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>S^{2}</annotation></semantics></math>.</p>
 </blockquote>
+
+<ul>
+<li>J. M. Sanz-Serra, Runge-Kutta Schemes for Hamiltonian Systems, Bit <strong>28</strong>, pp. 877-883, (1988).</li>
+</ul>
 
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on October 29, 2013 10:38:06 
+  Revised on April  3, 2018 10:44:07
   by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (161.53.130.104)
+  (193.198.162.14)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Runge-Kutta+method" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Runge-Kutta+method/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Runge-Kutta+method" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Runge-Kutta+method" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Runge-Kutta+method" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Runge-Kutta+method/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Runge-Kutta+method" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Runge-Kutta+method" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Runge-Kutta+method" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Runge-Kutta+method" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Runge-Kutta+method" id="view_source" rel="nofollow">Source</a>
